Shira/force-app/main/default/objects/Account/fields/AuthorizedSignatory__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedSignatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מורשה חתימה</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>