Shira/force-app/main/default/objects/Account/fields/CompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddress__c</fullName>
    <label>כתובת</label>
    <length>20</length>
    <type>Text</type>
</CustomField>