Shira/force-app/main/default/objects/Account/fields/CompanyHP__c.field-meta.xml
<CustomField>
    <fullName>CompanyHP__c</fullName>
    <label>ח.פ.</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>