Shira/force-app/main/default/objects/Account/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (POC)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>